package com.example.booking_system.employee;

public class EmployeeProfile {
}
